--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -20,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5"
   },
