--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Server.js",
+      "build": "tsc",
     "dev": "nodemon Server.js"
   },
   "keywords": [],
